Fixed avatar alignment
git-svn-id: svn+ssh://rubyforge.org/var/svn/myexperiment/trunk@3347 4f7b4649-9ca9-420a-81b3-55a188e4d46f

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2451,4 +2451,5 @@ span.owner {
 div.avatar {
   text-align:center;
   padding: 0.2em 0;
+  margin: 0 auto;
 }
